column added into scedule table and related changes to insert that values on save. Add Data Hub menu item in UI

--- a/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
@@ -21,7 +21,7 @@
       <div class="row form-group">
         <div class="col-md-4 col-lg-4">
           <label id="lblName" for="inputRoleName">Name</label>
-          <div>{{schedule.Name}}</div>
+          <div>{{ scheduleRecord.ProductBatches[0].ScheduleNameByUser }}</div>
         </div>
         <div class="col-md-4 col-lg-4">
           <label id="lblTemplate" for="inputRoleName">Statement Definition</label>
